--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -6,10 +6,13 @@
   <link rel="shortcut icon" href="/assets/icon64.png">
 </head>
 <body>
+  <div id="error-alert" class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+    <strong>Error!</strong> <a id="error-msg"></a>
+  </div>
   <canvas id="board-canvas"></canvas>
   <button onclick="openNav();"> >> </button>
   <div id="userpanel" class="userpanel"></div>
-  
   <script>
     function openNav() {
       document.getElementById("userpanel").style.width = "250px";
