:sparkles: Added color selection

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -49,4 +49,11 @@
     }
     </script>
 </body>
+<footer>
+  <div id="toolbar" class="toolbar">
+    <center>
+      <input type="color" id="colorPicker" name="colorPicker" value="#00000">
+    </center>
+  </div>
+</footer>
 </html>
