--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -47,12 +47,19 @@
         document.getElementById("dropdown-"+id).style.display = "block";
       }
     }
+
+    function downloadCanvas(){
+      var canvas = document.getElementById("board-canvas");
+      var img    = canvas.toDataURL("image/png");
+      window.open(img,'Image','resizable=1');
+    }
     </script>
 </body>
 <footer>
   <div id="toolbar" class="toolbar">
     <center>
       <input type="color" id="colorPicker" name="colorPicker" value="#00000">
+      <Button onclick="downloadCanvas();">Download Canvas</Button>
     </center>
   </div>
 </footer>
