:sparkles: Added Mobile support

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Open Board</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=no">
   <link rel="shortcut icon" href="/assets/icon64.png">
 </head>
 <body>
@@ -61,7 +61,7 @@
       <div class="toolbardiv">
         <input type="color" id="colorPicker" name="colorPicker" value="#00000">
         <Button class="button" onclick="downloadCanvas();">Screenshot Canvas</Button>
-      </div>
+    </div>
     </center>
   </div>
 </footer>
