:lipstick: Added info message

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -12,6 +12,7 @@
   <div class="modal-content">
     <center>
       <div>
+        <p>INFO: Unused rooms (rooms without users) are cleard all 5 minutes</p>
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br>
         <label for="roomId">Room Id:</label><br>
