--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Open Board</title>
+  <title>Weber Board</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=no">
   <link rel="shortcut icon" href="/assets/icon64.png">
 </head>
